--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -20,39 +20,11 @@
   publisher={MIT Press}
 }
 
-@inproceedings{jia2014caffe,
-  title={Caffe: Convolutional architecture for fast feature embedding},
-  author={Jia, Yangqing and Shelhamer, Evan and Donahue, Jeff and Karayev, Sergey and Long, Jonathan and Girshick, Ross and Guadarrama, Sergio and Darrell, Trevor},
-  booktitle={ACM MM},
-  year={2014}
-}
-
-@article{zeiler2013visualizing,
+@inproceedings{zeiler2013visualizing,
   title={Visualizing and understanding convolutional neural networks},
   author={Zeiler, Matthew D and Fergus, Rob},
-  journal={arXiv:1311.2901},
-  year={2013}
-}
-
-@article{simonyan2014very,
-  title={Very Deep Convolutional Networks for Large-Scale Image Recognition},
-  author={Simonyan, Karen and Zisserman, Andrew},
-  journal={arXiv:1409.1556},
+  booktitle={ECCV},
   year={2014}
-}
-
-@article{szegedy2014going,
-  title={Going deeper with convolutions},
-  author={Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
-  journal={arXiv:1409.4842},
-  year={2014}
-}
-
-@inproceedings{deng2009imagenet,
-  title={Imagenet: A large-scale hierarchical image database},
-  author={Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Li, Kai and Fei-Fei, Li},
-  booktitle={CVPR},
-  year={2009}
 }
 
 @inproceedings{natarajan2013learning,
@@ -118,13 +90,6 @@
   year={2013}
 }
 
-@article{azizpour2014generic,
-  title={From Generic to Specific Deep Representations for Visual Recognition},
-  author={Azizpour, Hossein and Razavian, Ali Sharif and Sullivan, Josephine and Maki, Atsuto and Carlsson, Stefan},
-  journal={arXiv:1406.5774},
-  year={2014}
-}
-
 @inproceedings{tang2013learning,
   title={Learning stochastic feedforward neural networks},
   author={Tang, Yichuan and Salakhutdinov, Ruslan},
@@ -139,13 +104,6 @@
   year={2013}
 }
 
-@inproceedings{oquab2014learning,
-  title={Learning and transferring mid-level image representations using convolutional neural networks},
-  author={Oquab, Maxime and Bottou, Leon and Laptev, Ivan and Sivic, Josef},
-  booktitle={CVPR},
-  year={2014}
-}
-
 @inproceedings{zhang2014panda,
   title={Panda: Pose aligned networks for deep attribute modeling},
   author={Zhang, Ning and Paluri, Manohar and Ranzato, Marc'Aurelio and Darrell, Trevor and Bourdev, Lubomir},
@@ -157,9 +115,6 @@
   title={Learning hierarchical features for scene labeling},
   author={Farabet, Cl{\'e}ment and Couprie, Camille and Najman, Laurent and LeCun, Yann},
   journal={TPAMI},
-  volume={35},
-  number={8},
-  pages={1915--1929},
   year={2013}
 }
 
@@ -174,9 +129,6 @@
   title={A multi-view embedding space for modeling internet images, tags, and their semantics},
   author={Gong, Yunchao and Ke, Qifa and Isard, Michael and Lazebnik, Svetlana},
   journal={IJCV},
-  volume={106},
-  number={2},
-  pages={210--233},
   year={2014}
 }
 
@@ -190,10 +142,7 @@
 @article{manwani2013noise,
   title={Noise tolerance under risk minimization},
   author={Manwani, Naresh and Sastry, PS},
-  journal={Cybernetics, IEEE Transactions on},
-  volume={43},
-  number={3},
-  pages={1146--1151},
+  journal={IEEE Transactions on Cybernetics},
   year={2013}
 }
 
@@ -201,9 +150,6 @@
   title={Class noise vs. attribute noise: A quantitative study},
   author={Zhu, Xingquan and Wu, Xindong},
   journal={Artificial Intelligence Review},
-  volume={22},
-  number={3},
-  pages={177--210},
   year={2004}
 }
 
@@ -211,9 +157,6 @@
   title={A study of the effect of different types of noise on the precision of supervised learning techniques},
   author={Nettleton, David F and Orriols-Puig, Albert and Fornells, Albert},
   journal={Artificial intelligence review},
-  volume={33},
-  number={4},
-  pages={275--306},
   year={2010}
 }
 
@@ -231,11 +174,11 @@
   year={2000}
 }
 
-@article{brodley2011identifying,
+@article{brodley1999identifying,
   title={Identifying mislabeled training data},
   author={Brodley, Carla E and Friedl, Mark A},
-  journal={arXiv:1106.0219},
-  year={2011}
+  journal={JAIR},
+  year={1999}
 }
 
 @incollection{miranda2009use,
@@ -256,11 +199,7 @@
   title={Classification in the presence of label noise: a survey},
   author={Fr{\'e}nay, Beno{\^\i}t and Verleysen, Michel},
   journal={TNNLS},
-  volume={25},
-  number={5},
-  pages={845--869},
-  year={2014},
-  publisher={IEEE}
+  year={2014}
 }
 
 @inproceedings{larsen1998design,
@@ -282,41 +221,6 @@
   author={Hinton, Geoffrey E and Srivastava, Nitish and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan R},
   journal={NIPS},
   year={2012}
-}
-
-@inproceedings{weinberger2005distance,
-  title={Distance metric learning for large margin nearest neighbor classification},
-  author={Weinberger, Kilian Q and Blitzer, John and Saul, Lawrence K},
-  booktitle={NIPS},
-  year={2005}
-}
-
-@inproceedings{mcfee2010metric,
-  title={Metric learning to rank},
-  author={McFee, Brian and Lanckriet, Gert R},
-  booktitle={ICML},
-  year={2010}
-}
-
-@inproceedings{koestinger2012large,
-  title={Large scale metric learning from equivalence constraints},
-  author={Koestinger, Martin and Hirzer, Martin and Wohlhart, Paul and Roth, Peter M and Bischof, Horst},
-  booktitle={CVPR},
-  year={2012}
-}
-
-@inproceedings{davis2007information,
-  title={Information-theoretic metric learning},
-  author={Davis, Jason V and Kulis, Brian and Jain, Prateek and Sra, Suvrit and Dhillon, Inderjit S},
-  booktitle={ICML},
-  year={2007}
-}
-
-@inproceedings{zhao2013unsupervised,
-  title={Unsupervised salience learning for person re-identification},
-  author={Zhao, Rui and Ouyang, Wanli and Wang, Xiaogang},
-  booktitle={CVPR},
-  year={2013}
 }
 
 @inproceedings{zhao2013person,
@@ -357,15 +261,8 @@
 @inproceedings{baltieri20113dpes,
   title={3dpes: 3d people dataset for surveillance and forensics},
   author={Baltieri, Davide and Vezzani, Roberto and Cucchiara, Rita},
-  booktitle={Proc. of the ACM workshop on Human gesture and behavior understanding},
+  booktitle={ACM workshop on Human gesture and behavior understanding},
   year={2011}
-}
-
-@inproceedings{zheng2009associating,
-  title={Associating Groups of People},
-  author={Zheng, Wei-Shi and Gong, Shaogang and Xiang, Tao},
-  booktitle={BMVC},
-  year={2009}
 }
 
 @inproceedings{xiong2014person,
@@ -385,13 +282,6 @@
 @inproceedings{szegedy2014going,
   title={Going deeper with convolutions},
   author={Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
-  booktitle={CVPR},
-  year={2015}
-}
-
-@inproceedings{ahmed2015improved,
-  title={An Improved Deep Learning Architecture for Person Re-Identification},
-  author={Ahmed, Ejaz and Jones, Michael and Marks, Tim K},
   booktitle={CVPR},
   year={2015}
 }
@@ -424,14 +314,6 @@
   year={2015}
 }
 
-@article{simonyan2014very,
-  title={Very deep convolutional networks for large-scale image recognition},
-  author={Simonyan, Karen and Zisserman, Andrew},
-  journal={arXiv preprint arXiv:1409.1556},
-  year={2014}
-}
-
-
 @inproceedings{joshi2012multi,
   title={Multi-domain learning: when do domains matter?},
   author={Joshi, Mahesh and Cohen, William W and Dredze, Mark and Ros{\'e}, Carolyn P},
@@ -453,10 +335,10 @@
   year={2014}
 }
 
-@article{long2015learning,
-  title={Learning Transferable Features with Deep Adaptation Networks},
-  author={Long, Mingsheng and Wang, Jianmin},
-  journal={arXiv preprint arXiv:1502.02791},
+@inproceedings{long2015learning,
+  title={Learning transferable features with deep adaptation networks},
+  author={Long, Mingsheng and Cao, Yue and Wang, Jianmin and Jordan, Michael},
+  booktitle={ICML},
   year={2015}
 }
 
@@ -471,9 +353,6 @@
   title={Integrating structured biological data by kernel maximum mean discrepancy},
   author={Borgwardt, Karsten M and Gretton, Arthur and Rasch, Malte J and Kriegel, Hans-Peter and Sch{\"o}lkopf, Bernhard and Smola, Alex J},
   journal={Bioinformatics},
-  volume={22},
-  number={14},
-  pages={e49--e57},
   year={2006}
 }
 
@@ -505,41 +384,25 @@
   year={2014}
 }
 
-@incollection{lin2014microsoft,
-  title={Microsoft COCO: Common objects in context},
-  author={Lin, Tsung-Yi and Maire, Michael and Belongie, Serge and Hays, James and Perona, Pietro and Ramanan, Deva and Doll{\'a}r, Piotr and Zitnick, C Lawrence},
-  booktitle={ECCV},
-  year={2014}
-}
-
 @article{everingham2010pascal,
   title={The pascal visual object classes (voc) challenge},
   author={Everingham, Mark and Van Gool, Luc and Williams, Christopher KI and Winn, John and Zisserman, Andrew},
   journal={IJCV},
-  volume={88},
-  number={2},
-  pages={303--338},
-  year={2010},
-  publisher={Springer}
+  year={2010}
 }
 
 @article{ILSVRC15,
 Author = {Olga Russakovsky and Jia Deng and Hao Su and Jonathan Krause and Sanjeev Satheesh and Sean Ma and Zhiheng Huang and Andrej Karpathy and Aditya Khosla and Michael Bernstein and Alexander C. Berg and Li Fei-Fei},
 Title = {{ImageNet Large Scale Visual Recognition Challenge}},
 Year = {2015},
-journal   = {International Journal of Computer Vision (IJCV)},
-doi = {10.1007/s11263-015-0816-y}
+journal   = {IJCV},
 }
 
 @article{dredze2010multi,
   title={Multi-domain learning by confidence-weighted parameter combination},
   author={Dredze, Mark and Kulesza, Alex and Crammer, Koby},
   journal={Machine Learning},
-  volume={79},
-  number={1-2},
-  pages={123--149},
-  year={2010},
-  publisher={Springer}
+  year={2010}
 }
 
 @article{zhang2012convex,
@@ -566,9 +429,7 @@ doi = {10.1007/s11263-015-0816-y}
 @inproceedings{chopra2013dlid,
   title={Dlid: Deep learning for domain adaptation by interpolating between domains},
   author={Chopra, Sumit and Balakrishnan, Suhrid and Gopalan, Raghuraman},
-  booktitle={ICML workshop on challenges in representation learning},
-  volume={2},
-  pages={5},
+  booktitle={ICML Workshop},
   year={2013}
 }
 
@@ -600,13 +461,6 @@ doi = {10.1007/s11263-015-0816-y}
   year={2013}
 }
 
-@inproceedings{zheng2015scalable,
-  title={Scalable Person Re-identification: A Benchmark},
-  author={Zheng, Liang and Shen, Liyue and Tian, Lu and Wang, Shengjin and Wang, Jingdong and Tian, Qi},
-  booktitle={ICCV},
-  year={2015}
-}
-
 @article{liao2014open,
   title={Open-set Person Re-identification},
   author={Liao, Shengcai and Mo, Zhipeng and Hu, Yang and Li, Stan Z},
@@ -631,7 +485,7 @@ doi = {10.1007/s11263-015-0816-y}
 @inproceedings{hirzer11a,
   author = {Martin Hirzer and Csaba Beleznai and Peter M. Roth and Horst Bischof},
   title = {Person Re-Identification by Descriptive and Discriminative Classification},
-  booktitle = {Proc. Scandinavian Conference on Image Analysis (SCIA)},
+  booktitle = {Scandinavian Conference on Image Analysis (SCIA)},
   year = {2011}
 }
 
@@ -640,13 +494,6 @@ doi = {10.1007/s11263-015-0816-y}
   author={Kawanishi, Yasutomo and Wu, Yang and Mukunoki, Masayuki and Minoh, Michihiko},
   booktitle={20th Korea-Japan Joint Workshop on Frontiers of Computer Vision},
   year={2014}
-}
-
-@article{paisitkriangkrai2015learning,
-  title={Learning to rank in person re-identification with metric ensembles},
-  author={Paisitkriangkrai, Sakrapee and Shen, Chunhua and Hengel, Anton van den},
-  journal={arXiv preprint arXiv:1503.01543},
-  year={2015}
 }
 
 @article{moon2001computational,
@@ -663,32 +510,25 @@ doi = {10.1007/s11263-015-0816-y}
   year={2012}
 }
 
-@inproceedings{girshick2014rich,
-  title={Rich feature hierarchies for accurate object detection and semantic segmentation},
-  author={Girshick, Ross and Donahue, Jeff and Darrell, Trevor and Malik, Jitendra},
-  booktitle={CVPR},
-  year={2014}
-}
-
-@article{long2014fully,
+@inproceedings{long2015fully,
   title={Fully convolutional networks for semantic segmentation},
   author={Long, Jonathan and Shelhamer, Evan and Darrell, Trevor},
-  journal={arXiv preprint arXiv:1411.4038},
-  year={2014}
+  booktitle={CVPR},
+  year={2015}
 }
 
-@article{azizpour2014generic,
-  title={From Generic to Specific Deep Representations for Visual Recognition},
-  author={Azizpour, Hossein and Razavian, Ali Sharif and Sullivan, Josephine and Maki, Atsuto and Carlsson, Stefan},
-  journal={arXiv:1406.5774},
-  year={2014}
+@inproceedings{azizpour2015generic,
+  title={From generic to specific deep representations for visual recognition},
+  author={Azizpour, Hossein and Sharif Razavian, Ali and Sullivan, Josephine and Maki, Atsuto and Carlsson, Stefan},
+  booktitle={CVPR Workshops},
+  year={2015}
 }
 
-@article{donahue2013decaf,
-  title={Decaf: A deep convolutional activation feature for generic visual recognition},
+@inproceedings{donahue2014decaf,
+  title={DeCAF: A Deep Convolutional Activation Feature for Generic Visual Recognition.},
   author={Donahue, Jeff and Jia, Yangqing and Vinyals, Oriol and Hoffman, Judy and Zhang, Ning and Tzeng, Eric and Darrell, Trevor},
-  journal={arXiv:1310.1531},
-  year={2013}
+  booktitle={ICML},
+  year={2014}
 }
 
 @inproceedings{oquab2014learning,
@@ -733,13 +573,6 @@ doi = {10.1007/s11263-015-0816-y}
   year={2017}
 }
 
-@inproceedings{zajdel2005keeping,
-  title={Keeping track of humans: Have I seen this person before?},
-  author={Zajdel, Wojciech and Zivkovic, Zoran and Krose, BJA},
-  booktitle={ICRA},
-  year={2005}
-}
-
 @inproceedings{gheissari2006person,
   title={Person reidentification using spatiotemporal appearance},
   author={Gheissari, Niloofar and Sebastian, Thomas B and Hartley, Richard},
@@ -759,13 +592,6 @@ doi = {10.1007/s11263-015-0816-y}
   author={Loy, Chen Change and Xiang, Tao and Gong, Shaogang},
   booktitle={CVPR},
   year={2009},
-}
-
-@inproceedings{gray2007evaluating,
-  title={Evaluating appearance models for recognition, reacquisition, and tracking},
-  author={Gray, Douglas and Brennan, Shane and Tao, Hai},
-  booktitle={PETS},
-  year={2007},
 }
 
 @article{wang2013intelligent,
@@ -796,13 +622,6 @@ doi = {10.1007/s11263-015-0816-y}
   year={2015}
 }
 
-@inproceedings{xu2014person,
-  title={Person search in a scene by jointly modeling people commonness and person uniqueness},
-  author={Xu, Yuanlu and Ma, Bingpeng and Huang, Rui and Lin, Liang},
-  booktitle={ACM'MM},
-  year={2014}
-}
-
 @InProceedings{Shi_2015_CVPR,
   author = {Shi, Zhiyuan and Hospedales, Timothy M. and Xiang, Tao},
   title = {Transferring a Semantic Representation for Person Re-Identification and Search},
@@ -817,15 +636,8 @@ doi = {10.1007/s11263-015-0816-y}
   year={2010},
 }
 
-@inproceedings{gray2007evaluating,
-  title={Evaluating appearance models for recognition, reacquisition, and tracking},
-  author={Gray, Douglas and Brennan, Shane and Tao, Hai},
-  booktitle={PETS},
-  year={2007},
-}
-
 @inproceedings{zheng2009associating,
-  title={Associating Groups of People.},
+  title={Associating Groups of People},
   author={Zheng, Wei-Shi and Gong, Shaogang and Xiang, Tao},
   booktitle={BMVC},
   year={2009}
@@ -927,13 +739,6 @@ doi = {10.1007/s11263-015-0816-y}
   author={Weinberger, Kilian Q and Blitzer, John and Saul, Lawrence K},
   booktitle={NIPS},
   year={2005}
-}
-
-@article{ding2015deep,
-  title={Deep feature learning with relative distance comparison for person re-identification},
-  author={Ding, Shengyong and Lin, Liang and Wang, Guangrun and Chao, Hongyang},
-  journal={PR},
-  year={2015},
 }
 
 @article{dollar2012pedestrian,
@@ -1039,13 +844,6 @@ doi = {10.1007/s11263-015-0816-y}
   author={Barbosa, Igor Barros and Cristani, Marco and Del Bue, Alessio and Bazzani, Loris and Murino, Vittorio},
   booktitle={ECCV},
   year={2012},
-}
-
-@inproceedings{li2013locally,
-  title={Locally aligned feature transforms across views},
-  author={Li, Wei and Wang, Xiaogang},
-  booktitle={CVPR},
-  year={2013},
 }
 
 @inproceedings{bialkowski2012database,
@@ -1174,13 +972,6 @@ doi = {10.1007/s11263-015-0816-y}
   year={2015}
 }
 
-@inproceedings{li2015multi,
-  title={Multi-scale Learning for Low-resolution Person Re-identification},
-  author={Li, Xiang and Zheng, Wei-Shi and Wang, Xiaojuan and Xiang, Tao and Gong, Shaogang},
-  booktitle={ICCV},
-  year={2015}
-}
-
 @inproceedings{zheng2015partial,
   title={Partial Person Re-identification},
   author={Zheng, Wei-Shi and Li, Xiang and Xiang, Tao and Liao, Shengcai and Lai, Jianhuang and Gong, Shaogang},
@@ -1240,7 +1031,7 @@ doi = {10.1007/s11263-015-0816-y}
 @inproceedings{zheng2016mars,
   title={Mars: A video benchmark for large-scale person re-identification},
   author={Zheng, Liang and Bie, Zhi and Sun, Yifan and Wang, Jingdong and Su, Chi and Wang, Shengjin and Tian, Qi},
-  booktitle={European Conference on Computer Vision},
+  booktitle={ECCV},
   year={2016}
 }
 
@@ -1404,11 +1195,4 @@ doi = {10.1007/s11263-015-0816-y}
   author={Bay, Herbert and Ess, Andreas and Tuytelaars, Tinne and Van Gool, Luc},
   journal={CVIU},
   year={2008}
-}
-
-@inproceedings{farenzena2010person,
-  title={Person re-identification by symmetry-driven accumulation of local features},
-  author={Farenzena, Michela and Bazzani, Loris and Perina, Alessandro and Murino, Vittorio and Cristani, Marco},
-  booktitle={CVPR},
-  year={2010}
 }
