Tweak the styles

--- a/preamble/preamble.tex
+++ b/preamble/preamble.tex
@@ -30,15 +30,26 @@
 \paragraphfont{\bf \em}
 
 \hypersetup{
-pdftitle={Scalable Human Identification with Deep Learning}, pdfauthor={Tong Xiao},
-pdfkeywords={Human identification, person re-identification, person search, deep learning},
-pdfsubject={Ph.D. Thesis},
-bookmarksnumbered, bookmarksopen=true, pdfpagemode=UseOutlines, pdfstartview={FitV},
-linkcolor=blue, colorlinks=true, anchorcolor=black,
-citecolor=blue,filecolor=magenta,menucolor=blue,urlcolor=blue}
+  pdftitle={Scalable Human Identification with Deep Learning},
+  pdfauthor={Tong Xiao},
+  pdfkeywords={Human identification, person re-identification, person search, deep learning},
+  pdfsubject={Ph.D. Thesis},
+  bookmarksnumbered,
+  bookmarksopen=true,
+  pdfpagemode=UseOutlines,
+  pdfstartview={FitV},
+  colorlinks=true,
+  anchorcolor=black,
+  filecolor=magenta,
+  linkcolor=[rgb]{0.098,0.463,0.824},
+  citecolor=[rgb]{0.098,0.463,0.824},
+  menucolor=[rgb]{0.098,0.463,0.824},
+  urlcolor=[rgb]{0.098,0.463,0.824}}
 
-\setlength{\textfloatsep}{20pt} \setlength{\floatsep}{20pt}
-\setlength{\intextsep}{20pt} \setlength{\dbltextfloatsep}{20pt}
+\setlength{\textfloatsep}{20pt}
+\setlength{\floatsep}{20pt}
+\setlength{\intextsep}{20pt}
+\setlength{\dbltextfloatsep}{20pt}
 \setlength{\dblfloatsep}{20pt}
 
 \renewcommand{\topfraction}{1}
@@ -61,14 +72,6 @@ citecolor=blue,filecolor=magenta,menucolor=blue,urlcolor=blue}
 
 % Include the Copyright, List of Tables and List of Figures
 \tablestrue \figurestrue
-
-% Preamble
-\newtheorem{theorem}{Theorem}[chapter]
-\newtheorem{definition}[theorem]{Definition}
-\newtheorem{lemma}[theorem]{Lemma}
-\newtheorem{corollary}[theorem]{Corollary}
-\newtheorem{remark}[theorem]{Remark}
-\newtheorem{proposition}[theorem]{Proposition}
 
 %The \raggedbottom declaration makes all pages
 %the height of the text on that page. No extra vertical space is added.
