--- a/mainmatter/noisy_labels.tex
+++ b/mainmatter/noisy_labels.tex
@@ -1,12 +1,29 @@
 \chapter{Learning Features from Noisy Labels}
 \label{ch:noisy-labels}
 
-\section{Introduction} % (fold)
-\label{sec:nl-introduction}
+Large-scale supervised datasets are crucial to train CNNs for various computer vision problems. However, obtaining a massive amount of well-labeled data is usually very expensive and time consuming. In this chapter, we develop a general framework to train CNNs with only a limited number of clean labels and millions of easily obtained noisy labels. We model the relationships between images, class labels and label noises with a probabilistic graphical model and further integrate it into an end-to-end deep learning system. To demonstrate the effectiveness of our approach, we collect a large-scale real-world clothing classification dataset with both noisy and clean labels. Experiments on this dataset indicate that our approach can better correct the noisy labels and improves the performance of trained CNNs.
 
+\section{Related Work} % (fold)
+\label{sec:nl-related-work}
 Deep learning with large-scale supervised training dataset has recently shown very impressive improvement on multiple image recognition challenges including image classification~\cite{krizhevsky2012imagenet}, attribute learning~\cite{zhang2014panda}, and scene classification~\cite{farabet2013learning}. While state-of-the-art results have been continuously reported~\cite{zeiler2013visualizing,simonyan2014very,szegedy2014going}, all these methods require reliable annotations from millions of images~\cite{deng2009imagenet} which are often expensive and time-consuming to obtain, preventing deep models from being quickly trained on new image recognition problems. Thus it is necessary to develop new efficient labeling and training frameworks for deep learning.
 
-One possible solution is to automatically collect a large amount of annotations from the Internet web images~\cite{gong2014multiview} (\ie extracting tags from the surrounding texts or keywords from search engines) and directly use them as ground truth to train deep models. Unfortunately, these labels are extremely unreliable due to various types of noise (\eg labeling mistakes from annotators or computing errors from extraction algorithms). Many studies have shown that these noisy labels could adversely impact the classification accuracy of the induced classifiers~\cite{zhu2004class,nettleton2010study,pechenizkiy2006class}. Various label noise-robust algorithms are developed but experiments show that performances of classifiers inferred by robust algorithms are still affected by label noise~\cite{bartlett2006convexity,teng2001comparison}. Other data cleansing algorithms are proposed~\cite{barandela2000decontamination,brodley1999identifying,miranda2009use}, but these approaches are difficult in distinguishing informative hard examples from harmful mislabeled ones.
+One possible solution is to automatically collect a large amount of annotations from the Internet web images~\cite{gong2014multiview} (\ie extracting tags from the surrounding texts or keywords from search engines) and directly use them as ground truth to train deep models. Unfortunately, these labels are extremely unreliable due to various types of noise (\eg labeling mistakes from annotators or computing errors from extraction algorithms).
+
+Learning with noisy labeled training data has been extensively studied in the machine learning and computer vision literature. For most of the related work including the effect of label noises, taxonomy of label noises, robust algorithms and noise cleaning algorithms for learning with noisy data, we refer to~\cite{frenay2014classification} for a comprehensive review.
+
+{\bf Direct learning with noisy labels:} Many studies have shown that label noises can adversely impact the classification accuracy of induced classifiers~\cite{zhu2004class,nettleton2010study,pechenizkiy2006class}. To better handle label noise, some approaches rely on training classifiers with label noise-robust algorithms~\cite{beigman2009learning,manwani2013noise}. However, Bartlett \etal~\cite{bartlett2006convexity} prove that most of the loss functions are not completely robust to label noise. Experiments in~\cite{teng2001comparison} show that the classifiers inferred by label noise-robust algorithms are still affected by label noise. These methods seem to be adequate only when label noise can be safely managed by overfitting avoidance~\cite{frenay2014classification}. On the other hand, some label noise cleansing methods were proposed to remove or correct mislabeled instances~\cite{barandela2000decontamination,brodley1999identifying,miranda2009use}, but these approaches were difficult in distinguishing informative hard examples from harmful mislabeled ones. Thus they might remove too many instances and the overcleansing could reduce the performances of classifiers~\cite{matic1992computer}.
+
+{\bf Noise modeling with deep learning:} Various methods have been proposed to handle label noise in different problem settings, but there are very few works about deep learning from noisy labels~\cite{mnih2012learning, larsen1998design, sukhbaatar2014learning}. Mnih and Hinton~\cite{mnih2012learning} built a simple noise model for aerial images but only considered binary classification. Larsen \etal~\cite{larsen1998design} assumed label noises are independent from true class labels which is a simple and special case. Sukhbaatar \etal~\cite{sukhbaatar2014learning} generalized from them by considering multi-class classification and modeling class dependent noise, but they assumed the noise was conditionally independent with the image content, ignoring the hardness of labeling images of different confusing levels. Our work can be viewed as a generalization of~\cite{sukhbaatar2014learning,natarajan2013learning} and our model is flexible enough to not only class dependent but also image dependent noise.
+
+Although annotating all the data is costly, it is often easy to obtain a small amount of clean labels, which enables to use some existing semi-supervised learning or transfer learning methods as introduced below.
+
+{\bf Semi-supervised learning:} Apart from direct learning with label noise, some semi-supervised learning algorithms were developed to utilize weakly labeled or even unlabeled data. The Label Propagation method~\cite{zhu2002learning} explicitly used ground truths of well labeled data to classify unlabeled samples. However, it suffered from computing pairwise distance, which has quadratic complexity with the number of samples thus cannot be applied on large-scale datasets. Weston \etal~\cite{weston2012deep} proposed to embed a pairwise loss in the middle layer of a deep neural network, which benefits the learning of discriminative features. But they needed extra information about whether a pair of unlabeled images belong to the same class, which cannot be obtained in our problem.
+
+{\bf Transfer learning:} The success of CNNs lies in their capability of learning rich and hierarchical image features. However, the model parameters cannot be properly learned when training data is not enough. Researchers proposed to conquer this problem by first initializing CNN parameters with a model pretrained on a larger yet related dataset, and then finetuning it on the smaller dataset of specific task~\cite{krizhevsky2012imagenet, oquab2014learning, azizpour2015generic,donahue2014decaf}. Nevertheless, this transfer learning scheme could be suboptimal when the two tasks are just loosely related. In our case of clothing classification, we find that training a CNN from scratch with limited clean labels and massive noisy labels is better than finetuning it only on the clean labels.
+% section related_work (end)
+
+\section{Method Overview} % (fold)
+\label{sec:nl-overview}
 
 \begin{figure}[t]
 \begin{center}
@@ -15,8 +32,6 @@ One possible solution is to automatically collect a large amount of annotations 
 \caption{Overview of our approach. Labels of web images often suffer from different types of noise. A label noise model is proposed to detect and correct the wrong labels. The corrected labels are used to train underlying CNNs.}
 \label{fig:nl-overview}
 \end{figure}
-
-Although annotating all the data is costly, it is often easy to obtain a small amount of clean labels. Based on the observation of transferability of deep neural networks, people initialize parameters with a model pretrained on a larger yet related dataset~\cite{krizhevsky2012imagenet}, and then finetune on the smaller dataset of specific tasks~\cite{oquab2014learning,azizpour2015generic,donahue2014decaf}. Such methods may better avoid overfitting and utilize the relationships between the two datasets. However, we find that training a CNN from scratch with limited clean labels and massive noisy labels is better than finetuning it only on clean labels. Other approaches address the problem as semi-supervised learning where noisy labels are discarded~\cite{zhu2002learning}. These algorithms usually suffer from model complexity thus cannot be applied on large-scale datasets. Therefore, it is inevitable to develop a better way of using the huge amount of noisy labeled data.
 
 Our goal is to build an end-to-end deep learning system that is capable of training with both limited clean labels and massive noisy labels more effectively. Figure~\ref{fig:nl-overview} shows the framework of our approach. We collect $1,000,000$ clothing images from online shopping websites. Each image is automatically assigned with a noisy label according to the keywords in its surrounding text. We manually refine $72,409$ image labels, which constitute a clean sub-dataset. All the data are then used to train CNNs, while the major challenge is to identify and correct wrong labels during the training process.
 
@@ -38,19 +53,6 @@ Our contributions fall in three aspects. First, we study the cause of noisy labe
 \label{fig:nl-noise-cluster}
 \end{figure}
 % section introduction (end)
-
-\section{Related Work} % (fold)
-\label{sec:nl-related-work}
-Learning with noisy labeled training data has been extensively studied in the machine learning and computer vision literature. For most of the related work including the effect of label noises, taxonomy of label noises, robust algorithms and noise cleaning algorithms for learning with noisy data, we refer to~\cite{frenay2014classification} for a comprehensive review.
-
-{\bf Direct learning with noisy labels:} Many studies have shown that label noises can adversely impact the classification accuracy of induced classifiers~\cite{zhu2004class}. To better handle label noise, some approaches rely on training classifiers with label noise-robust algorithms~\cite{beigman2009learning,manwani2013noise}. However, Bartlett \etal~\cite{bartlett2006convexity} prove that most of the loss functions are not completely robust to label noise. Experiments in~\cite{teng2001comparison} show that the classifiers inferred by label noise-robust algorithms are still affected by label noise. These methods seem to be adequate only when label noise can be safely managed by overfitting avoidance~\cite{frenay2014classification}. On the other hand, some label noise cleansing methods were proposed to remove or correct mislabeled instances~\cite{barandela2000decontamination,brodley1999identifying,miranda2009use}, but these approaches were difficult in distinguishing informative hard examples from harmful mislabeled ones. Thus they might remove too many instances and the overcleansing could reduce the performances of classifiers~\cite{matic1992computer}.
-
-{\bf Semi-supervised learning:} Apart from direct learning with label noise, some semi-supervised learning algorithms were developed to utilize weakly labeled or even unlabeled data. The Label Propagation method~\cite{zhu2002learning} explicitly used ground truths of well labeled data to classify unlabeled samples. However, it suffered from computing pairwise distance, which has quadratic complexity with the number of samples thus cannot be applied on large-scale datasets. Weston \etal~\cite{weston2012deep} proposed to embed a pairwise loss in the middle layer of a deep neural network, which benefits the learning of discriminative features. But they needed extra information about whether a pair of unlabeled images belong to the same class, which cannot be obtained in our problem.
-
-{\bf Transfer learning:} The success of CNNs lies in their capability of learning rich and hierarchical image features. However, the model parameters cannot be properly learned when training data is not enough. Researchers proposed to conquer this problem by first initializing CNN parameters with a model pretrained on a larger yet related dataset, and then finetuning it on the smaller dataset of specific task~\cite{krizhevsky2012imagenet, oquab2014learning, azizpour2015generic,donahue2014decaf}. Nevertheless, this transfer learning scheme could be suboptimal when the two tasks are just loosely related. In our case of clothing classification, we find that training a CNN from scratch with limited clean labels and massive noisy labels is better than finetuning it only on the clean labels.
-
-{\bf Noise modeling with deep learning:} Various methods have been proposed to handle label noise in different problem settings, but there are very few works about deep learning from noisy labels~\cite{mnih2012learning, larsen1998design, sukhbaatar2014learning}. Mnih and Hinton~\cite{mnih2012learning} built a simple noise model for aerial images but only considered binary classification. Larsen \etal~\cite{larsen1998design} assumed label noises are independent from true class labels which is a simple and special case. Sukhbaatar \etal~\cite{sukhbaatar2014learning} generalized from them by considering multi-class classification and modeling class dependent noise, but they assumed the noise was conditionally independent with the image content, ignoring the hardness of labeling images of different confusing levels. Our work can be viewed as a generalization of~\cite{sukhbaatar2014learning,natarajan2013learning} and our model is flexible enough to not only class dependent but also image dependent noise.
-% section related_work (end)
 
 \section{Label Noise Model} % (fold)
 \label{sec:nl-label-noise-model}
@@ -323,7 +325,7 @@ It should be noticed that~\cite{sukhbaatar2014learning} assumed the distribution
 \label{sub:nl-effect-of-noise-estimation}
 In order to understand how our model handles noisy labels, we first show several examples in Figure~\ref{fig:nl-model-output}. We find that given a noisy label, our model exploits its current knowledge to estimate the probability distribution of the true label and then replaces the noisy one with it as supervision. Another interesting observation is that our model can still figure out the correct label if the prediction of the class label $p(\vec{y}|\vec{x})$ or the noise type $p(\vec{z}|\vec{x})$ goes wrong. These two latent variables compensate with each other to help the system distinguish between hard samples and noisy labeled ones.
 
-Next we demonstrate the effectiveness of learning to predict the label noise type. Notice that if an image has low probability of ``noise free'' (\ie, $p(\vec{z}_1=1|\vec{x})$ is small), then our model will believe it is likely to be mislabeled. In order to check the reliability of these predictions, we estimate $p(\vec{z}_1=1|\vec{x})$ on the validation set and sort the images accordingly in ascending order. For the precision calculation, we consider a candidate image as true positive if its clean label mismatches its original noisy label, and our model predicts it as not ``noisy free''. The rank-precision curve is plotted in Figure~\ref{fig:nl-noise-prediction-rp}. It shows that our model can identify mislabeled samples quite well based on their image content, which verifies the observation that mislabeled images often share similar visual patterns.
+Next we demonstrate the effectiveness of learning to predict the label noise type. Notice that if an image has low probability of ``noise free'' (\ie, $p(\vec{z}_1=1|\vec{x})$ is small), then our model will believe it is likely to be mislabeled. In order to check the reliability of these predictions, we estimate $p(\vec{z}_1=1|\vec{x})$ on the validation set and sort the images accordingly in ascending order. For the precision calculation, we consider a candidate image as true positive if its clean label mismatches its original noisy label, and our model predicts it as not ``noisy free''. The rank-precision curve is plotted in Figure~\ref{fig:nl-noise-prediction-rp}. It shows that our model can identify mislabeled samples based on their image content, which verifies the observation that mislabeled images often share similar visual patterns.
 
 \begin{figure}[t]
 \begin{center}
@@ -335,6 +337,6 @@ Next we demonstrate the effectiveness of learning to predict the label noise typ
 % subsection effect_of_noise_estimation (end)
 % section experiments (end)
 
-\section{Conclusion} % (fold)
-\label{sec:nl-conclusion}
-In this paper, we address the problem of training a deep learning classifier with a massive amount of noisy labeled training data and a small amount of clean annotations which are generally easy to collect. To utilize both limited clean labels and massive noisy labels, we propose a novel probabilistic framework to describe how noisy labels are produced. We introduce two latent variables, the true label and the noise type, to bridge the gap between an input image and its noisy label. We observe that the label noises not only depend on the ambiguity between classes, but could follow similar visual patterns as well. We build the dependency of the noise type \wrt images, and infer the ground truth label with the EM algorithm. We integrate the probabilistic model into a deep learning framework and demonstrate the effectiveness of our method on a large-scale real-world clothing classification dataset.
+\section{Conclusions} % (fold)
+\label{sec:nl-conclusions}
+In this chapter, we address the problem of training a deep learning classifier with a massive amount of noisy labeled training data and a small amount of clean annotations which are generally easy to collect. To utilize both limited clean labels and massive noisy labels, we propose a novel probabilistic framework to describe how noisy labels are produced. We introduce two latent variables, the true label and the noise type, to bridge the gap between an input image and its noisy label. We observe that the label noises not only depend on the ambiguity between classes, but could follow similar visual patterns as well. We build the dependency of the noise type \wrt images, and infer the ground truth label with the EM algorithm. We integrate the probabilistic model into a deep learning framework and demonstrate the effectiveness of our method on a large-scale real-world clothing classification dataset.
